# attackmap-analyzer-atproto

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
.pytest_cache/v/cache/: nodeids
src/attackmap_analyzer_atproto/: __init__.py  analyzer.py  contracts.py
tests/: test_atproto_analyzer.py
tests/fixtures/atproto_like_repo/: package.json
tests/fixtures/atproto_like_repo/lexicons/com/atproto/server/: createSession.json
tests/fixtures/atproto_like_repo/lexicons/com/atproto/sync/: subscribeRepos.json
