[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attackmap-analyzer-atproto"
version = "0.1.0"
description = "Thin AT Protocol overlay analyzer plugin for AttackMap"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "AttackMap Contributors"}
]
dependencies = [
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
core = [
  "attackmap>=0.1.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.entry-points."attackmap.analyzers"]
atproto = "attackmap_analyzer_atproto:AtprotoAnalyzer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
